--- a/about/index.html
+++ b/about/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AmrShalaby</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  type="text/css" href="/disigin1.css">
+    <link rel="stylesheet"  type="text/css" href="disigin1.css">
     <script src="https://kit.fontawesome.com/b828253d90.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
     <div class="hero">
         <video autoplay loop muted plays-inline class="vid">
-            <source src="/img/mixkit-flying-through-a-nebula-in-the-cosmos-14410-medium.mp4" type="video/mp4">
+            <source src="img/mixkit-flying-through-a-nebula-in-the-cosmos-14410-medium.mp4" type="video/mp4">
         </video>
         <nav>
-            <img src="/img/Black and White .logo" class="logo" alt="#">
+            <img src="img/Black and White .logo" class="logo" alt="#">
             <ul>
                 <li><a href="#"> HOME</a></li>
                 <li><a href="#">Contact me</a></li>
